v1.37/rke2/README.md
# RKE2
A Kubernetes distribution focused on enabling Federal government compliance-based use cases. Also known as rke-government.

## Cluster Setup

**Note:** Default installation method on **SUSE Linux Enterprise Server 16.0** is using RPM and `selinux: true` is also added to the `/etc/rancher/rke2/config.yaml` on both server and agent nodes.

1. Create two machines, any modern Linux will work. For this test, the custer was setup with 1 control-plane, etcd node and 1 worker node using **SUSE Linux Enterprise Server 16.0**.
2. RKE2 provides an installation script that is a convenient way to install it as a service on *systemd* or *openrc* based systems. To install RKE2 using this method, run the below:
  ```
  mkdir -p /etc/rancher/rke2 && cat <<EOF > /etc/rancher/rke2/config.yaml
  token: test
  selinux: true
  EOF
  
  curl -sfL https://get.rke2.io | sudo INSTALL_RKE2_VERSION=v1.37.0+rke2r1 sh -
  systemctl enable rke2-server
  systemctl start rke2-server
  ```
3. To install on worker nodes and add them to the cluster, create a config file with token and server entries. Here is an example showing how to join a worker node. The value to use for token is stored at */var/lib/rancher/rke2/server/node-token* on your server node, or just the value supplied to the *token* arg when starting your server node, as shown in the example above.
  ```
  mkdir -p /etc/rancher/rke2 && cat <<EOF > /etc/rancher/rke2/config.yaml
  server: https://serverone-ip:9345
  token: test
  selinux: true
  EOF
  
  curl -sfL https://get.rke2.io | sudo INSTALL_RKE2_VERSION=v1.37.0+rke2r1 INSTALL_RKE2_TYPE='agent' sh -
  systemctl enable rke2-agent
  systemctl start rke2-agent
  ```

## Running Conformance Tests

1. Download, extract and run sonobuoy version **v0.57.5**.
   ```
   sonobuoy run --plugin-env=e2e.E2E_EXTRA_ARGS="--non-blocking-taints=node-role.kubernetes.io/controller --ginkgo.v" --mode=certified-conformance --kubernetes-version=v1.37.0 --kubeconfig=/etc/rancher/rke2/rke2.yaml
   ```
2. Check sonobouy status. (It may take 60 minutes or longer to run)
   ```
   sonobuoy status --kubeconfig=/etc/rancher/rke2/rke2.yaml
         PLUGIN     STATUS   RESULT   COUNT   PROGRESS
            e2e   complete   passed       1
   systemd-logs   complete   passed       2

   Sonobuoy has completed. Use `sonobuoy retrieve` to get results.
   ```
3. Retrieve results. (Once all the tests are completed)
   ```
   sonobuoy retrieve --kubeconfig=/etc/rancher/rke2/rke2.yaml
   ```
4. Review results using the tar file.
   ```
   sonobuoy results <tar.gz file>
   ```